--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
             <ul class="project_navegacao" aria-label="Navegação entre modelos expecificos de projetos">
                 <li class="all">All</li>
                 <li class="design">E-commerce</li>
-                <li class="graphic">Plataformas</li>
-                <li class="website">Websites</li>
+                <li class="graphic">Platform</li>
+                <li class="website">Sites</li>
             </ul>
         </div>
         <div class="projects_armazenamento">
