--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <li id="website"><img src="imgs/PDI2.png" alt="Landing Page do filme Sonic"></li>
             </ul>
         </div>
-        <a href="./app/area_cliente.php">Load More Portfólio</a>
+        <a href="">Load More Portfólio</a>
         <!-- <a href="app/area_cliente.php">Load More Portfólio</a> -->
     </section>
 
