--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
-                        <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <!-- <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li> -->
                     </ul>
                 </div>
                 <div class="skill_content">
@@ -273,6 +274,58 @@
                     </ul>
                 </div>
                 <div class="skill_content">
+                    <h3>METOD.. ÁGEIS</h3>
+                    <ul>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        <!-- <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li> -->
+                    </ul>
+                </div>
+                <div class="skill_content">
+                    <h3>C#</h3>
+                    <ul>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li>
+                    </ul>
+                </div>
+                <div class="skill_content">
+                    <h3>C</h3>
+                    <ul>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li>
+                    </ul>
+                </div>
+                <div class="skill_content">
+                    <h3>C++</h3>
+                    <ul>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <!-- <li><i class="fa-sharp fa-solid fa-star"></i></li> -->
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li>
+                    </ul>
+                </div>
+                <div class="skill_content">
+                    <h3>ANDROID STUDIO</h3>
+                    <ul>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <li><i class="fa-regular fa-star-sharp-half-stroke"></i></li>
+                    </ul>
+                </div>
+                <div class="skill_content">
                     <h3>LOW CODE</h3>
                     <ul>
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
@@ -285,6 +338,7 @@
                 <div class="skill_content">
                     <h3>DEPLOY</h3>
                     <ul>
+                        <li><i class="fa-sharp fa-solid fa-star"></i></li>
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
                         <li><i class="fa-sharp fa-solid fa-star"></i></li>
